--- a/tests/fixture/valid-ldap.yaml
+++ b/tests/fixture/valid-ldap.yaml
@@ -2,7 +2,7 @@
 devpi-ldap:
   url: ldap://ldap.forumsys.com
   user_search:
-    base: OU=scientists,DC=mydomain,DC=local
+    base: OU=scientists,DC=example,DC=com
     filter: (&(objectClass=user)(sAMAccountName={username}))
     attribute_name: distinguishedName
   group_search:
