--- a/tests/fixture/valid-ldap.yaml
+++ b/tests/fixture/valid-ldap.yaml
@@ -1,4 +1,5 @@
 ---
+# This must point to an existing/available server. Otherwise even ordinary logins will not work.
 devpi-ldap:
   url: ldap://ldap.forumsys.com
   user_search:
