--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
   - "pip install -r requirements.txt"
   - "pip freeze"
 script: 
-  - python setup.py sdist
+  - python setup.py sdist bdist_wheel
   - nosetests
