--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - "3.5"
   - "pypy"
 install: 
+  - "pip install -r requirements_dev.txt"
   - "pip install -r requirements.txt"
   - "pip freeze"
 script: 
