--- a/requirements.txt
+++ b/requirements.txt
@@ -5,48 +5,57 @@
 #    pip-compile --no-index --output-file requirements.txt requirements.in
 #
 apipkg==1.4               # via execnet
-beautifulsoup4==4.5.1     # via devpi-web
-bleach==1.4.3             # via readme-renderer
-Chameleon==2.24           # via pyramid-chameleon
-check-manifest==0.32      # via devpi-client
-defusedxml==0.4.1         # via devpi-web
-devpi-client==2.6.4
+appdirs==1.4.3            # via setuptools
+argon2-cffi==16.3.0       # via passlib
+beautifulsoup4==4.5.3     # via devpi-web
+bleach==2.0.0             # via readme-renderer
+cffi==1.9.1               # via argon2-cffi
+Chameleon==3.1            # via pyramid-chameleon
+check-manifest==0.35      # via devpi-client
+defusedxml==0.5.0         # via devpi-web
+devpi-client==2.7.0
 devpi-common==3.0.1
 devpi-ldap==1.2.0
-devpi-plumber[test]==0.3.0
-devpi-server==4.1.0
+devpi-plumber[test]==0.4.1
+devpi-server==4.2.1
 devpi-web==3.1.1
-docutils==0.12            # via devpi-web, readme-renderer
+docutils==0.13.1          # via devpi-web, readme-renderer
+enum34==1.1.6             # via argon2-cffi
 execnet==1.4.1            # via devpi-server
-html5lib==0.9999999       # via bleach
+html5lib==0.999999999     # via bleach
+hupper==0.4.4             # via pyramid
 itsdangerous==0.24        # via devpi-server
-ldap3==1.4.0              # via devpi-ldap
+ldap3==1.4.0
+packaging==16.8           # via setuptools
+passlib[argon2]==1.7.1    # via devpi-server
 PasteDeploy==1.5.2        # via pyramid
-pkginfo==1.3.2            # via devpi-client
-pluggy==0.3.1             # via devpi-server, tox
-py==1.4.31                # via devpi-client, devpi-common, devpi-server, tox
-pyasn1==0.1.9             # via ldap3
-Pygments==2.1.3           # via devpi-web, readme-renderer
+pkginfo==1.4.1            # via devpi-client
+pluggy==0.4.0             # via devpi-server, tox
+py==1.4.32                # via devpi-client, devpi-common, devpi-server, tox
+pyasn1==0.2.3             # via ldap3
+pycparser==2.17           # via cffi
+pygments==2.2.0           # via devpi-web, readme-renderer
+pyparsing==2.2.0          # via packaging
 pyramid-chameleon==0.3    # via devpi-web
-pyramid==1.7.3            # via devpi-server, devpi-web, pyramid-chameleon
-PyYAML==3.11              # via devpi-ldap
-readme-renderer==0.7.0    # via devpi-web
+pyramid==1.8.3            # via devpi-server, devpi-web, pyramid-chameleon
+PyYAML==3.12              # via devpi-ldap
+readme-renderer==17.2     # via devpi-web
 repoze.lru==0.6           # via devpi-server, pyramid
-requests==2.11.1          # via devpi-common
-six==1.10.0               # via bleach, devpi-plumber, html5lib, readme-renderer
-tox==2.3.1                # via devpi-client
+requests==2.13.0          # via devpi-common
+six==1.10.0               # via argon2-cffi, bleach, devpi-plumber, html5lib, packaging, readme-renderer, setuptools
+tox==2.6.0                # via devpi-client
 translationstring==1.3    # via pyramid
-twitter.common.contextutil==0.3.7  # via devpi-plumber
-twitter.common.dirutil==0.3.7  # via twitter.common.contextutil
-twitter.common.lang==0.3.7  # via twitter.common.dirutil
+twitter.common.contextutil==0.3.9  # via devpi-plumber
+twitter.common.dirutil==0.3.9  # via twitter.common.contextutil
+twitter.common.lang==0.3.9  # via twitter.common.dirutil
 venusian==1.0             # via pyramid
-virtualenv==15.0.3        # via tox
-waitress==0.9.0           # via devpi-server
-WebOb==1.6.1              # via pyramid
+virtualenv==15.1.0        # via tox
+waitress==1.0.2           # via devpi-server
+webencodings==0.5         # via html5lib
+WebOb==1.7.1              # via pyramid
 Whoosh==2.7.4             # via devpi-web
-zope.deprecation==4.1.2   # via pyramid
-zope.interface==4.2.0     # via pyramid
+zope.deprecation==4.2.0   # via pyramid
+zope.interface==4.3.3     # via pyramid
 
-# The following packages are commented out because they are
-# considered to be unsafe in a requirements file:
-# setuptools                # via pyramid, zope.deprecation, zope.interface
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools                # via html5lib, pyramid, zope.deprecation, zope.interface
