--- a/requirements.txt
+++ b/requirements.txt
@@ -4,59 +4,62 @@
 #
 #    pip-compile --no-index --output-file requirements.txt requirements.in
 #
-apipkg==1.4               # via execnet
+apipkg==1.5               # via execnet
 argon2-cffi==18.1.0       # via passlib
 beautifulsoup4==4.6.0     # via devpi-web
 bleach==2.1.3             # via readme-renderer
 certifi==2018.4.16        # via requests
 cffi==1.11.5              # via argon2-cffi, cmarkgfm
-chameleon==3.3            # via pyramid-chameleon
+chameleon==3.4            # via pyramid-chameleon
 chardet==3.0.4            # via requests
 check-manifest==0.37      # via devpi-client
 cmarkgfm==0.4.2           # via readme-renderer
 defusedxml==0.5.0         # via devpi-web
-devpi-client==4.0.2
+devpi-client==4.0.3
 devpi-common==3.2.3
-devpi-ldap==1.2.1
+devpi-ldap==1.2.2
 devpi-plumber[test]==0.4.3
-devpi-server==4.5.0
+devpi-server==4.6.0
 devpi-web==3.3.0
 docutils==0.14            # via devpi-web, readme-renderer
+enum34==1.1.6             # via argon2-cffi
 execnet==1.5.0            # via devpi-server
 future==0.16.0            # via readme-renderer
 html5lib==1.0.1           # via bleach
 hupper==1.3               # via pyramid
-idna==2.6                 # via requests
+idna==2.7                 # via requests
 itsdangerous==0.24        # via devpi-server
 ldap3==1.4.0
+packaging==17.1           # via tox
 passlib[argon2]==1.7.1    # via devpi-server
 pastedeploy==1.5.2        # via plaster-pastedeploy, pyramid
 pkginfo==1.4.2            # via devpi-client
-plaster-pastedeploy==0.5  # via pyramid
+plaster-pastedeploy==0.6  # via pyramid
 plaster==1.0              # via plaster-pastedeploy, pyramid
 pluggy==0.6.0             # via devpi-client, devpi-server, tox
-py==1.5.3                 # via devpi-client, devpi-common, devpi-server, tox
+py==1.5.4                 # via devpi-client, devpi-common, devpi-server, tox
 pyasn1==0.4.3             # via ldap3
 pycparser==2.18           # via cffi
 pygments==2.2.0           # via devpi-web, readme-renderer
+pyparsing==2.2.0          # via packaging
 pyramid-chameleon==0.3    # via devpi-web
 pyramid==1.9.2            # via devpi-server, devpi-web, pyramid-chameleon
-pyyaml==3.12              # via devpi-ldap
-readme-renderer==20.0     # via devpi-web
+pyyaml==3.13              # via devpi-ldap
+readme-renderer==21.0     # via devpi-web
 repoze.lru==0.7           # via devpi-server, pyramid
-requests==2.18.4          # via devpi-common
-six==1.11.0               # via argon2-cffi, bleach, devpi-plumber, html5lib, readme-renderer, tox
-tox==3.0.0                # via devpi-client
+requests==2.19.1          # via devpi-common
+six==1.11.0               # via argon2-cffi, bleach, devpi-plumber, html5lib, packaging, readme-renderer, tox
+tox==3.1.2                # via devpi-client
 translationstring==1.3    # via pyramid
 twitter.common.contextutil==0.3.9  # via devpi-plumber
 twitter.common.dirutil==0.3.9  # via twitter.common.contextutil
 twitter.common.lang==0.3.9  # via twitter.common.dirutil
-urllib3==1.22             # via requests
+urllib3==1.23             # via requests
 venusian==1.1.0           # via pyramid
 virtualenv==16.0.0        # via tox
 waitress==1.1.0           # via devpi-server
 webencodings==0.5.1       # via html5lib
-webob==1.8.1              # via pyramid
+webob==1.8.2              # via pyramid
 whoosh==2.7.4             # via devpi-web
 zope.deprecation==4.3.0   # via pyramid
 zope.interface==4.5.0     # via pyramid
