--- a/requirements.txt
+++ b/requirements.txt
@@ -5,61 +5,63 @@
 #    pip-compile --no-index --output-file requirements.txt requirements.in
 #
 apipkg==1.5               # via execnet
-argon2-cffi==18.1.0       # via passlib
-beautifulsoup4==4.6.0     # via devpi-web
-bleach==2.1.3             # via readme-renderer
-certifi==2018.4.16        # via requests
+appdirs==1.4.3            # via devpi-server
+argon2-cffi==18.3.0       # via passlib
+beautifulsoup4==4.7.1     # via devpi-web
+bleach==3.1.0             # via readme-renderer
+certifi==2018.11.29       # via requests
 cffi==1.11.5              # via argon2-cffi, cmarkgfm
-chameleon==3.4            # via pyramid-chameleon
+chameleon==3.5            # via pyramid-chameleon
 chardet==3.0.4            # via requests
 check-manifest==0.37      # via devpi-client
 cmarkgfm==0.4.2           # via readme-renderer
 defusedxml==0.5.0         # via devpi-web
-devpi-client==4.0.3
-devpi-common==3.2.3
+devpi-client==4.2.0
+devpi-common==3.3.1
 devpi-ldap==1.2.2
-devpi-plumber[test]==0.4.3
-devpi-server==4.6.0
-devpi-web==3.3.0
+devpi-plumber[test]==0.5.0
+devpi-server==4.8.0
+devpi-web==3.5.0
 docutils==0.14            # via devpi-web, readme-renderer
-enum34==1.1.6             # via argon2-cffi
 execnet==1.5.0            # via devpi-server
-future==0.16.0            # via readme-renderer
-html5lib==1.0.1           # via bleach
-hupper==1.3               # via pyramid
-idna==2.7                 # via requests
-itsdangerous==0.24        # via devpi-server
+filelock==3.0.10          # via tox
+hupper==1.4.2             # via pyramid
+idna==2.8                 # via requests
+itsdangerous==1.1.0       # via devpi-server
 ldap3==1.4.0
-packaging==17.1           # via tox
 passlib[argon2]==1.7.1    # via devpi-server
-pastedeploy==1.5.2        # via plaster-pastedeploy, pyramid
-pkginfo==1.4.2            # via devpi-client
+pastedeploy==2.0.1        # via plaster-pastedeploy
+pkginfo==1.5.0.1          # via devpi-client
 plaster-pastedeploy==0.6  # via pyramid
 plaster==1.0              # via plaster-pastedeploy, pyramid
-pluggy==0.6.0             # via devpi-client, devpi-server, tox
-py==1.5.4                 # via devpi-client, devpi-common, devpi-server, tox
-pyasn1==0.4.3             # via ldap3
-pycparser==2.18           # via cffi
-pygments==2.2.0           # via devpi-web, readme-renderer
-pyparsing==2.2.0          # via packaging
+pluggy==0.8.1             # via devpi-client, devpi-server, tox
+py==1.7.0                 # via devpi-client, devpi-common, devpi-server, tox
+pyasn1==0.4.5             # via ldap3
+pycparser==2.19           # via cffi
+pygments==2.3.1           # via devpi-web, readme-renderer
 pyramid-chameleon==0.3    # via devpi-web
-pyramid==1.9.2            # via devpi-server, devpi-web, pyramid-chameleon
+pyramid==1.10.1           # via devpi-server, devpi-web, pyramid-chameleon
+python-dateutil==2.7.5    # via strictyaml
 pyyaml==3.13              # via devpi-ldap
-readme-renderer==21.0     # via devpi-web
-repoze.lru==0.7           # via devpi-server, pyramid
-requests==2.19.1          # via devpi-common
-six==1.11.0               # via argon2-cffi, bleach, devpi-plumber, html5lib, packaging, readme-renderer, tox
-tox==3.1.2                # via devpi-client
+readme-renderer[md]==24.0  # via devpi-web
+repoze.lru==0.7           # via devpi-server
+requests==2.21.0          # via devpi-common
+ruamel.yaml==0.15.85      # via strictyaml
+six==1.12.0               # via argon2-cffi, bleach, devpi-plumber, python-dateutil, readme-renderer, tox
+soupsieve==1.6.2          # via beautifulsoup4
+strictyaml==1.0.0         # via devpi-server
+toml==0.10.0              # via tox
+tox==3.6.1                # via devpi-client
 translationstring==1.3    # via pyramid
 twitter.common.contextutil==0.3.9  # via devpi-plumber
 twitter.common.dirutil==0.3.9  # via twitter.common.contextutil
 twitter.common.lang==0.3.9  # via twitter.common.dirutil
-urllib3==1.23             # via requests
-venusian==1.1.0           # via pyramid
-virtualenv==16.0.0        # via tox
+urllib3==1.24.1           # via requests
+venusian==1.2.0           # via pyramid
+virtualenv==16.2.0        # via tox
 waitress==1.1.0           # via devpi-server
-webencodings==0.5.1       # via html5lib
-webob==1.8.2              # via pyramid
+webencodings==0.5.1       # via bleach
+webob==1.8.5              # via pyramid
 whoosh==2.7.4             # via devpi-web
-zope.deprecation==4.3.0   # via pyramid
-zope.interface==4.5.0     # via pyramid
+zope.deprecation==4.4.0   # via pyramid
+zope.interface==4.6.0     # via pyramid
